--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
+    "nodemailer": "^6.7.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
