--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
     "css-loader": "^6.5.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
-    "nodemailer": "^6.7.2",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
