--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^6.5.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
+    "heroku": "^7.59.2",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
