--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
     "sass-loader": "^12.3.0",
+    "serve-favicon": "^2.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
