--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.0",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-react": "^7.17.12",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "live-server": "^1.2.1",
-    "validator": "^13.6.0"
+    "style-loader": "^3.3.1",
+    "validator": "^13.6.0",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
-    "css-loader": "^6.5.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "heroku": "^7.59.2",
@@ -35,10 +39,6 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
     "sass-loader": "^12.3.0",
-    "serve-favicon": "^2.5.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1"
+    "serve-favicon": "^2.5.0"
   }
 }
