--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
-    "live-server": "^1.2.1",
     "style-loader": "^3.3.1",
-    "validator": "^13.6.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
@@ -31,14 +29,11 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "heroku": "^7.59.2",
-    "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-modal": "^3.14.3",
-    "sass-loader": "^12.3.0",
-    "serve-favicon": "^2.5.0"
+    "sass-loader": "^12.3.0"
   }
 }
