--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bootstrap": "^5.1.3",
-    "emailjs-com": "^3.2.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "heroku": "^7.59.2",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
